bug 472311 - Alert dialogs not being spoken, section 508 issue, r=aaronlev, r=enn